--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/convict": "^6.1.1",
     "@types/convict-format-with-validator": "^6.0.2",
     "@types/express": "^4.17.14",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.11.58",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
@@ -41,6 +42,7 @@
   },
   "dependencies": {
     "@typegoose/typegoose": "^9.12.1",
+    "@types/mime-types": "^2.1.1",
     "chalk": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
@@ -53,7 +55,10 @@
     "got": "^12.5.0",
     "http-status-codes": "^2.2.0",
     "inversify": "^6.0.1",
+    "mime-types": "^2.1.35",
     "mongoose": "^6.6.2",
+    "multer": "^1.4.5-lts.1",
+    "nanoid": "^4.0.0",
     "pino": "^8.6.1",
     "reflect-metadata": "^0.1.13"
   }
